// This file is under development for the new admin gRPC services.
// Remove this comment when ready for production.

package admin

import (
	"context"
	"yourapp/internal/domain/repository"
	"yourapp/internal/domain/service"
	"yourapp/pb/admin"

	"connectrpc.com/connect"
	"gorm.io/gorm"
)

// RoleHandler implements the Connect gRPC interface for admin role service
// It should satisfy adminconnect.RoleServiceHandler

type RoleHandler struct {
	roleService service.RoleService
}

// NewRoleHandler creates a new role handler using singleton instances
func NewRoleHandler(db *gorm.DB) *RoleHandler {
	return &RoleHandler{
		roleService: service.NewRoleService(db, repository.NewRoleRepository(), repository.NewPermissionRepository()),
	}
}

// CreateRole creates a new role
func (h *RoleHandler) CreateRole(ctx context.Context, req *connect.Request[admin.CreateRoleRequest]) (*connect.Response[admin.RoleResponse], error) {
	// TODO: Implement logic using h.roleService
	return nil, connect.NewError(connect.CodeUnimplemented, nil)
}

// GetRole retrieves a role by ID
func (h *RoleHandler) GetRole(ctx context.Context, req *connect.Request[admin.GetRoleRequest]) (*connect.Response[admin.RoleResponse], error) {
	// TODO: Implement logic using h.roleService
	return nil, connect.NewError(connect.CodeUnimplemented, nil)
}

// UpdateRole updates a role
func (h *RoleHandler) UpdateRole(ctx context.Context, req *connect.Request[admin.UpdateRoleRequest]) (*connect.Response[admin.RoleResponse], error) {
	// TODO: Implement logic using h.roleService
	return nil, connect.NewError(connect.CodeUnimplemented, nil)
}

// DeleteRole deletes a role
func (h *RoleHandler) DeleteRole(ctx context.Context, req *connect.Request[admin.DeleteRoleRequest]) (*connect.Response[admin.DeleteRoleResponse], error) {
	// TODO: Implement logic using h.roleService
	return nil, connect.NewError(connect.CodeUnimplemented, nil)
}

// ListRoles retrieves all roles
func (h *RoleHandler) ListRoles(ctx context.Context, req *connect.Request[admin.ListRolesRequest]) (*connect.Response[admin.ListRolesResponse], error) {
	// TODO: Implement logic using h.roleService
	return nil, connect.NewError(connect.CodeUnimplemented, nil)
}
